--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Professional Profile - Your Name</title>
+  <title>Professional Profile - Githin.V</title>
 
   <!-- Tailwind CSS -->
   <script src="https://cdn.tailwindcss.com"></script>
@@ -87,8 +87,7 @@
         Experienced Electronic & Software Architect with over 15 years of expertise in designing, developing, and optimizing embedded systems and software solutions. Skilled in system architecture, firmware, and technical leadership across multiple domains.
       </p>
       <div class="mt-6 space-y-2">
-        <p><strong>📍 Address:</strong> Edathundil House, Punthala-689509, Alappuzha, Kerala, India</p>
-        <p><strong>📧 Email:</strong> <a href="mailto:vgithin@gmail.com" class="text-indigo-500 hover:underline">youremail@example.com</a></p>
+        <p><strong>📧 Email:</strong> <a href="mailto:vgithin@gmail.com" class="text-indigo-500 hover:underline">vgithin@gmail.com</a></p>
         <p><strong>📞 Phone:</strong> +91-9986613510 </p>
       </div>
     </div>
@@ -111,21 +110,38 @@
     </ul>
   </div>
 
-  <!-- QR Code -->
-  <div class="max-w-4xl mx-auto p-6 mt-8 frosted rounded-2xl shadow-xl flex flex-col items-center">
-    <h2 class="text-2xl font-bold text-indigo-600 mb-4">My QR Code</h2>
+<!-- QR Code -->
+<div class="max-w-4xl mx-auto p-6 mt-8 frosted rounded-2xl shadow-xl flex flex-col items-center">
+  <h2 class="text-2xl font-bold text-indigo-600 mb-4"> Scan Here </h2>
+
+  <!-- Box around QR code -->
+  <div class="p-4 bg-white rounded-xl shadow-md flex items-center justify-center">
     <div id="qrcode"></div>
-    <p class="mt-4 text-gray-600 dark:text-gray-400 text-sm">Scan to save my contact details</p>
   </div>
 
-  <script>
-    document.addEventListener('DOMContentLoaded', function() {
-      // QR Code
-      new QRCode(document.getElementById('qrcode'), {
-        text: 'BEGIN:VCARD\nVERSION:3.0\nFN:Githin.v\nTITLE:Embedded Systems & Software Architect\nTEL:+91-9986613510\nEMAIL:vgithin@gmail.com\nADR:;;Your City, Country\nEND:VCARD',
-        width: 128,
-        height: 128
-      });
+  <p class="mt-4 text-gray-600 dark:text-gray-400 text-sm">Scan to save my contact details</p>
+</div>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
+<script>
+document.addEventListener('DOMContentLoaded', function() {
+    const vCardMinimal = `BEGIN:VCARD
+  VERSION:3.0
+  FN:Githin.v
+  TEL:+91-9986613510
+  EMAIL:vgithin@gmail.com
+  ORG:Tata Elxsi
+  URL:https://www.linkedin.com/in/githinv
+  END:VCARD`;
+
+	  new QRCode(document.getElementById('qrcode'), {
+		text: vCardMinimal,
+		width: 150,
+		height: 150,
+		colorDark: "#4B0082",
+		colorLight: "#ffffff",
+		correctLevel: QRCode.CorrectLevel.L
+	  });
 
       // Dark/Light Mode Toggle
       const toggle = document.getElementById('darkModeToggle');
