--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
 
   <!-- Hero Section -->
   <div class="text-center py-16">
-    <h1 class="text-5xl font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-blue-500 to-indigo-600">GITHIN V</h1>
-    <p class="mt-4 text-xl text-gray-600 dark:text-gray-300">Embedded Systems & Software Architect | 15+ Years Experience</p>
+    <h1 class="text-7xl font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-blue-500 to-indigo-600">GITHIN V</h1>
+    <p class="mt-4 text-2xl text-gray-600 dark:text-gray-300">Embedded Systems & Software Architect | 15+ Years Experience</p>
   </div>
 
   <!-- Profile Card -->
@@ -83,12 +83,13 @@
     </div>
 
     <div class="md:ml-8 mt-6 md:mt-0 flex-1">
-      <p class="text-gray-700 dark:text-gray-300 leading-relaxed">
+      <p class="text-gray-700 dark:text-gray-300 leading-relaxed ">
         Experienced Electronic & Software Architect with over 15 years of expertise in designing, developing, and optimizing embedded systems and software solutions. Skilled in system architecture, firmware, and technical leadership across multiple domains.
       </p>
       <div class="mt-6 space-y-2">
-        <p><strong>📧 Email:</strong> <a href="mailto:vgithin@gmail.com" class="text-indigo-500 hover:underline">vgithin@gmail.com</a></p>
-        <p><strong>📞 Phone:</strong> +91-9986613510 </p>
+        <p><strong>🔗 LinkedIn :</strong> <a href="https://www.linkedin.com/in/githinv" target="_blank" rel="noopener noreferrer" class="text-indigo-500 hover:underline">www.linkedin.com/in/githinv</a></p>
+        <p><strong>📧 Email :</strong> <a href="mailto:vgithin@gmail.com" class="text-indigo-500 hover:underline">vgithin@gmail.com</a></p>
+        <p><strong>📞 Phone :</strong> +91-9986613510 </p>
       </div>
     </div>
   </div>
@@ -97,23 +98,72 @@
   <div class="max-w-4xl mx-auto p-6 mt-8 frosted rounded-2xl shadow-xl">
     <h2 class="text-3xl font-bold text-indigo-600 mb-4">Experience</h2>
     <ul class="space-y-6">
+      <!-- Company 1 -->
       <li>
-        <h3 class="text-xl font-semibold">Senior Embedded Architect</h3>
-        <p class="text-sm text-gray-500 dark:text-gray-400">XYZ Technologies | 2015 - Present</p>
-        <p class="mt-2 text-gray-700 dark:text-gray-300">Leading embedded system architecture, software design, and cross-functional development for cutting-edge products.</p>
+        <h3 class="text-xl font-semibold">Embedded Architect</h3>
+        <p class="text-sm text-gray-500 dark:text-gray-400">
+          <span class="text-base font-bold text-gray-800 dark:text-gray-200">Tata Elxsi Ltd</span> 
+          | Sep 2017 - Present
+        </p>
+        <p class="mt-2 text-gray-700 dark:text-gray-300">
+          Leading embedded system architecture, software design, and cross-functional development for cutting-edge products.
+        </p>
       </li>
+
+      <!-- Company 2 -->
       <li>
-        <h3 class="text-xl font-semibold">Embedded Software Engineer</h3>
-        <p class="text-sm text-gray-500 dark:text-gray-400">ABC Electronics | 2010 - 2015</p>
-        <p class="mt-2 text-gray-700 dark:text-gray-300">Developed and optimized firmware and low-level drivers for consumer and industrial electronics.</p>
+        <h3 class="text-xl font-semibold">Project Lead - Embedded Electronics</h3>
+        <p class="text-sm text-gray-500 dark:text-gray-400">
+          <span class="text-base font-bold text-gray-800 dark:text-gray-200">Asaies Automation Pvt Ltd</span> 
+          | Aug 2015 - Sep 2017
+        </p>
+        <p class="mt-2 text-gray-700 dark:text-gray-300">
+          Leading embedded system architecture, software design, and cross-functional development for cutting-edge products.
+        </p>
       </li>
+
+      <!-- Company 3 -->
+      <li>
+        <h3 class="text-xl font-semibold">Sr, Embedded System Design Engineer</h3>
+        <p class="text-sm text-gray-500 dark:text-gray-400">
+          <span class="text-base font-bold text-gray-800 dark:text-gray-200">Falcon Electro-Tek Pvt Ltd</span> 
+          | Jul 2012 - Aug 2015
+        </p>
+        <p class="mt-2 text-gray-700 dark:text-gray-300">
+          Leading embedded system architecture, software design, and cross-functional development for cutting-edge products.
+        </p>
+      </li>
+
+      <!-- Company 4 -->
+      <li>
+        <h3 class="text-xl font-semibold">Research Fellow</h3>
+        <p class="text-sm text-gray-500 dark:text-gray-400">
+          <span class="text-base font-bold text-gray-800 dark:text-gray-200">National Institute of Oceanography</span> 
+          | Feb 2011 - Mar 2012
+        </p>
+        <p class="mt-2 text-gray-700 dark:text-gray-300">
+          Leading embedded system architecture, software design, and cross-functional development for cutting-edge products.
+        </p>
+      </li>
+
+      <!-- Company 5 -->
+      <li>
+        <h3 class="text-xl font-semibold">Project Coordinator</h3>
+        <p class="text-sm text-gray-500 dark:text-gray-400">
+          <span class="text-base font-bold text-gray-800 dark:text-gray-200">Sunlit Electro Controls Pvt Ltd</span> 
+          | Jun 2009 - Sep 2010
+        </p>
+        <p class="mt-2 text-gray-700 dark:text-gray-300">
+          Leading embedded system architecture, software design, and cross-functional development for cutting-edge products.
+        </p>
+      </li>
+
     </ul>
   </div>
 
 <!-- QR Code -->
 <div class="max-w-4xl mx-auto p-6 mt-8 frosted rounded-2xl shadow-xl flex flex-col items-center">
-  <h2 class="text-2xl font-bold text-indigo-600 mb-4"> Scan Here </h2>
-
+  <!-- <h2 class="text-2xl font-bold text-indigo-600 mb-4"> Scan Here </h2> -->
   <!-- Box around QR code -->
   <div class="p-4 bg-white rounded-xl shadow-md flex items-center justify-center">
     <div id="qrcode"></div>
@@ -138,8 +188,8 @@ document.addEventListener('DOMContentLoaded', function() {
 		text: vCardMinimal,
 		width: 150,
 		height: 150,
-		colorDark: "#4B0082",
-		colorLight: "#ffffff",
+		colorDark: "#000000",                             // QR code “pixels”
+		colorLight: "#ffffff",                            // QR code background
 		correctLevel: QRCode.CorrectLevel.L
 	  });
 
