--- a/index.html
+++ b/index.html
@@ -78,13 +78,16 @@
 
   <!-- Profile Card -->
   <div class="max-w-4xl mx-auto p-6 frosted rounded-2xl shadow-xl flex flex-col md:flex-row items-center md:items-start">
-    <div class="w-40 h-40 rounded-full overflow-hidden shadow-md border-4 border-indigo-500">
+  <div class="w-40 h-40 rounded-full p-1 bg-gradient-to-r from-blue-500 to-indigo-600 shadow-md">
+    <div class="w-full h-full rounded-full overflow-hidden bg-white dark:bg-gray-800">
       <img src="githinv.png" alt="Profile Photo" class="w-full h-full object-cover" />
     </div>
+  </div>
 
     <div class="md:ml-8 mt-6 md:mt-0 flex-1">
       <p class="text-gray-700 dark:text-gray-300 leading-relaxed ">
-        Experienced Electronic & Software Architect with over 15 years of expertise in designing, developing, and optimizing embedded systems and software solutions. Skilled in system architecture, firmware, and technical leadership across multiple domains.
+        🔴 Experienced Embedded Electronic & Firmware Architect with over 15+ years of expertise in designing, developing, and optimizing embedded 
+        systems and software solutions. Skilled in system architecture, firmware, and technical leadership across multiple domains
       </p>
       <div class="mt-6 space-y-2">
         <p><strong>🔗 LinkedIn :</strong> <a href="https://www.linkedin.com/in/githinv" target="_blank" rel="noopener noreferrer" class="text-indigo-500 hover:underline">www.linkedin.com/in/githinv</a></p>
@@ -96,7 +99,7 @@
 
   <!-- Experience Section -->
   <div class="max-w-4xl mx-auto p-6 mt-8 frosted rounded-2xl shadow-xl">
-    <h2 class="text-3xl font-bold text-indigo-600 mb-4">Experience</h2>
+    <h2 class="text-3xl font-bold text-transparent bg-clip-text bg-gradient-to-r from-blue-500 to-indigo-600 mb-4">Experience</h2>
     <ul class="space-y-6">
       <!-- Company 1 -->
       <li>
@@ -106,7 +109,11 @@
           | Sep 2017 - Present
         </p>
         <p class="mt-2 text-gray-700 dark:text-gray-300">
-          Leading embedded system architecture, software design, and cross-functional development for cutting-edge products.
+          🟠 Designing innovative solutions for new products and driving platform-level enhancements across STB and CPE, 
+          while working with technologies including RDK, Buildroot, Yocto, Linux Kernel, Bootloader, Filesystems, Wi-Fi, Bluetooth, Networking, 
+          and leading a team of engineers. Ensuring high customer satisfaction through data-driven product improvement and 
+          resolving critical field issues. Delivering robust, high-quality solutions across both offshore and onsite development, 
+          with a focus on ramping up teams for long-term success.
         </p>
       </li>
 
@@ -118,7 +125,10 @@
           | Aug 2015 - Sep 2017
         </p>
         <p class="mt-2 text-gray-700 dark:text-gray-300">
-          Leading embedded system architecture, software design, and cross-functional development for cutting-edge products.
+          🟡 Designing and developing embedded products for NEWS Printing Industries, Heavy Electrical, and General-purpose applications, 
+          including motor drivers, redistribution systems, waveguides, and Embedded Linux systems. Developing Firmware for 8-bit and 32-bit MCUs 
+          using UART, SPI, USB, and Modbus, and managing testing, validation, and multiple teams. Handling the full product lifecycle from 
+          schematic capture and CAD design to board bring-up and production, delivering reliable, high-quality solutions.
         </p>
       </li>
 
@@ -130,7 +140,10 @@
           | Jul 2012 - Aug 2015
         </p>
         <p class="mt-2 text-gray-700 dark:text-gray-300">
-          Leading embedded system architecture, software design, and cross-functional development for cutting-edge products.
+          🟢 Embedded software and firmware development on PIC, AVR, and ARMv7 using Keil µVision and IAR, with expertise in RTOS/bare-metal 
+          optimization and hardware abstraction. Skilled in hardware design with OrCAD/Altium, peripheral drivers (UART, SPI, I2C, GPIO, ADC), 
+          and wireless protocols (Zigbee, Bluetooth, Wi-Fi, NFC). Strong in system bring-up, HAL testing, compliance validation, 
+          and cost-effective, high-quality product delivery.
         </p>
       </li>
 
@@ -142,7 +155,9 @@
           | Feb 2011 - Mar 2012
         </p>
         <p class="mt-2 text-gray-700 dark:text-gray-300">
-          Leading embedded system architecture, software design, and cross-functional development for cutting-edge products.
+          🔵 Designing and implementing Embedded Linux, ARM, and 8051-based environmental data acquisition systems (Autonomous Weather Stations, 
+          Tide Gauges, and Radar Level Sensor), with expertise in hardware/software optimization, field deployment, and maintenance of 
+          autonomous weather stations and sensors
         </p>
       </li>
 
@@ -154,7 +169,8 @@
           | Jun 2009 - Sep 2010
         </p>
         <p class="mt-2 text-gray-700 dark:text-gray-300">
-          Leading embedded system architecture, software design, and cross-functional development for cutting-edge products.
+          🟣 Managing production workflows with expertise in troubleshooting power electronic drivers, logic boards, and synchronization of 
+          electronic ballasts, while contributing to automated product design/programming and supporting technicians in system maintenance
         </p>
       </li>
 
@@ -177,7 +193,7 @@
 document.addEventListener('DOMContentLoaded', function() {
     const vCardMinimal = `BEGIN:VCARD
   VERSION:3.0
-  FN:Githin.v
+  FN:Githin.V
   TEL:+91-9986613510
   EMAIL:vgithin@gmail.com
   ORG:Tata Elxsi
